--- a/MicroService_Udemy/docker-compose.override.yml
+++ b/MicroService_Udemy/docker-compose.override.yml
@@ -17,3 +17,50 @@ services:
       - catalogdb
     ports:
       - "8000:80"
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379"
+  discountdb:
+    container_name: discountdb
+    restart: always
+    environment:
+    - "POSTGRES_USER=admin"
+    - "POSTGRES_PASSWORD=admin1234"
+    - "POSTGRES_DB=discountdb"
+    volumes:
+    - postgres_data:/var/lib/postgressql/data/
+    ports:
+      - "5432:5432"
+  pgadmin:
+    container_name: pgadmin
+    restart: always
+    environment:
+    - "PGADMIN_DEFAULT_EMAIL=aspnetrun@gmail.com"
+    - "PGADMIN_DEFAULT_PASSWORD=admin1234"
+    volumes:
+    - pgadmin_data:/root/.pgadmin/
+    ports:
+      - "5050:80"
+
+  portainer:
+    container_name: portainer
+    restart: always
+    ports:
+      - "8080:8000"
+      - "9000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - portainer_data:/data
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"
+    depends_on:
+      - basketdb
+    ports:
+      - "8001:80"
+
