--- a/MicroService_Udemy/Services/Basket/Basket.Api/appsettings.json
+++ b/MicroService_Udemy/Services/Basket/Basket.Api/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "GrpcSettings": {
+    "DiscountUrl": "http://localhost:5003"
+  },
   "AllowedHosts": "*"
 }
