--- a/MicroService_Udemy/Services/Ordering/Ordering.Api/appsettings.json
+++ b/MicroService_Udemy/Services/Ordering/Ordering.Api/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+  },
+  "EmailSettings": {
+    "FromAddress": "loominex@gmail.com",
+    "ApiKey": "",
+    "FromName": "abolfazl"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
