--- a/MicroService_Udemy/Services/Ordering/Ordering.Application/Ordering.Application.csproj
+++ b/MicroService_Udemy/Services/Ordering/Ordering.Application/Ordering.Application.csproj
@@ -11,9 +11,8 @@
   <ItemGroup>
 	<PackageReference Include="FluentValidation" Version="10.4.0" />
 	<PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
-    <PackageReference Include="AutoMapper" Version="11.0.1" />
-	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.5.3" />
-	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+	  <PackageReference Include="AutoMapper" Version="10.1.1" />
+	  <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />	  <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="9.5.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.1" />
   </ItemGroup>
 
