--- a/MicroService_Udemy/docker-compose.override.yml
+++ b/MicroService_Udemy/docker-compose.override.yml
@@ -33,6 +33,15 @@ services:
     - postgres_data:/var/lib/postgressql/data/
     ports:
       - "5432:5432"
+  orderdb:
+    container_name: orderdb
+    environment:
+        SA_PASSWORD: "SwN12345678"
+        ACCEPT_EULA: "Y"
+        MSSQL_PID: "Developer"
+    restart: always
+    ports:
+        - "1433:1433"
   pgadmin:
     container_name: pgadmin
     restart: always
@@ -86,4 +95,15 @@ services:
       - discountdb
     ports:
       - "8003:80"
+
+
+  ordering.api:
+    container_name: ordering.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      -  "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+    depends_on:
+      - orderdb
+    ports:
+      - "8004:80"
 
