finish containerazing ordering api by rabbitmq and masstransit cqrs

--- a/MicroService_Udemy/docker-compose.override.yml
+++ b/MicroService_Udemy/docker-compose.override.yml
@@ -42,6 +42,13 @@ services:
     restart: always
     ports:
         - "1433:1433"
+  rabbitmq:
+    container_name: rabbitmq
+    restart: always
+    ports:
+        - "5672:5672"
+        - "15672:15672"
+
   pgadmin:
     container_name: pgadmin
     restart: always
@@ -69,8 +76,11 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=basketdb:6379"
       - "GrpcSettings:DiscountUrl=http://discount.grpc"
+      - "EventBussSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
+
     depends_on:
       - basketdb
+      - rabbitmq
     ports:
       - "8001:80"
 
@@ -101,9 +111,12 @@ services:
     container_name: ordering.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      -  "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+      - "ConnectionStrings:OrderingConnectionString=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+      - "EventBussSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
+
     depends_on:
       - orderdb
+      - rabbitmq
     ports:
       - "8004:80"
 
