--- a/MicroService_Udemy/Services/Ordering/Ordering.Api/appsettings.json
+++ b/MicroService_Udemy/Services/Ordering/Ordering.Api/appsettings.json
@@ -14,5 +14,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EventBussSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
   "AllowedHosts": "*"
 }
