--- a/MicroService_Udemy/docker-compose.override.yml
+++ b/MicroService_Udemy/docker-compose.override.yml
@@ -120,3 +120,16 @@ services:
     ports:
       - "8004:80"
 
+
+  ocelotapigateway:
+    container_name: ocelotapigateway
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+      - ordering.api
+      - discount.api
+      - catalog.api
+      - basket.api
+    ports:
+      - "8010:80"
+
